# file-io

./: .cirrus.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  file-io.cabal
.github/workflows/: test.yaml
System/File/: AbstractFilePath.hs  Common.hs  OsPath.hs  PlatformFilePath.hs  PlatformPath.hs  Posix.hs  Windows.hs
System/File/AbstractFilePath/: Posix.hs  Windows.hs
System/File/OsPath/: Internal.hs
System/File/PlatformPath/: Internal.hs
posix/System/File/: Platform.hs
tests/: CLC237.hs  Properties.hs  T14.hs  T15.hs  T15Win.hs  T8.hs  TestUtils.hsc
windows/System/File/: Platform.hs  Platform.hsc
