cabal-version:      2.4
name:               file-io
version:            0.1.0.0

synopsis: Basic file IO operations

description: Basic file IO operations like Prelude, but also supports 'AbstractFilePath'.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            BSD-3-Clause
author:             Julian Ospald
maintainer:         hasufell@posteo.de

copyright:          Julian Ospald 2022
category:           System
extra-source-files: CHANGELOG.md

library
    default-language: Haskell2010

    if os(windows)
        other-modules:
            System.File.AbstractFilePath.Windows
        build-depends: Win32 >= 3.0.0.0
    else
        other-modules:
            System.File.AbstractFilePath.Posix
        build-depends: unix >= 2.8.0.0

    build-depends:
        base        >= 4.10    && < 4.17,
        bytestring  >= 0.9.2   && < 0.12,
        filepath    >= 2.0     && < 2.1,

    exposed-modules:
        System.File.AbstractFilePath

    ghc-options: -Wall
